fix: keep MultiStep goal stats from overflowing parent container (#7473)

--- a/src/DonationForms/resources/styles/components/_goal.scss
+++ b/src/DonationForms/resources/styles/components/_goal.scss
@@ -11,6 +11,10 @@
             margin: 0;
             padding: 0;
             list-style: none;
+
+            @media (max-width: 400px) {
+                flex-wrap: wrap; /* Enable wrapping on screens 400px or narrower */
+            }
         }
 
         &__list-item {
